--- a/childgames-quiz/app.config
+++ b/childgames-quiz/app.config
@@ -10,6 +10,9 @@
             <setting name="TimeoutMinutes" serializeAs="String">
                 <value>7</value>
             </setting>
+            <setting name="ResultingAnswer" serializeAs="String">
+                <value>****Замени всю эту строку на ответ**********</value>
+            </setting>
         </ChildGamesQuiz.Properties.Settings>
     </userSettings>
 </configuration>
