--- a/childgames-quiz/ChildGamesQuiz.csproj
+++ b/childgames-quiz/ChildGamesQuiz.csproj
@@ -98,6 +98,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Content Include="Data\capcha.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\panthera-pardus.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
